Added Contact Form & New Portfolio Entry
- Added contact form
- Added a portfolio entry for the website's GitHub
- Updated header background with parallax effect
- Re-organized header buttons

--- a/index.html
+++ b/index.html
@@ -4,29 +4,34 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - David Barsamian</title>
-    <meta name="twitter:description" content="A portfolio">
-    <meta name="twitter:card" content="summary">
-    <meta name="description" content="A portfolio">
-    <meta property="og:type" content="website">
+    <title>David Barsamian</title>
+    <meta name="twitter:image" content="assets/img/portrait_pic.jpg">
     <meta name="twitter:title" content="David Barsamian">
-    <link rel="icon" type="image/jpeg" sizes="400x400" href="assets/img/wrEvBqWQ_400x400.jpg">
-    <link rel="icon" type="image/jpeg" sizes="400x400" href="assets/img/wrEvBqWQ_400x400.jpg">
-    <link rel="icon" type="image/jpeg" sizes="400x400" href="assets/img/wrEvBqWQ_400x400.jpg">
-    <link rel="icon" type="image/jpeg" sizes="400x400" href="assets/img/wrEvBqWQ_400x400.jpg">
-    <link rel="icon" type="image/jpeg" sizes="400x400" href="assets/img/wrEvBqWQ_400x400.jpg">
+    <meta property="og:type" content="website">
+    <meta name="description" content="A portfolio">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:description" content="A portfolio">
+    <meta property="og:image" content="">
+    <link rel="icon" type="image/png" sizes="400x400" href="assets/img/portrait_pic_rounded.png">
+    <link rel="icon" type="image/png" sizes="400x400" href="assets/img/portrait_pic_rounded.png">
+    <link rel="icon" type="image/png" sizes="400x400" href="assets/img/portrait_pic_rounded.png">
+    <link rel="icon" type="image/png" sizes="400x400" href="assets/img/portrait_pic_rounded.png">
+    <link rel="icon" type="image/png" sizes="400x400" href="assets/img/portrait_pic_rounded.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Krona+One">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
-    <link rel="stylesheet" href="assets/css/styles.min.css">
+    <link rel="stylesheet" href="assets/css/Animated-Typing-With-Blinking.css">
+    <link rel="stylesheet" href="assets/css/Contact-Form-Clean.css">
+    <link rel="stylesheet" href="assets/css/Features-Blue.css">
+    <link rel="stylesheet" href="assets/css/Highlight-Blue.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css">
 </head>
 
 <body id="page-top"><a data-aos="zoom-in-left" data-aos-once="true" class="menu-toggle rounded" href="#" style="border-radius: 0;"><i class="fa fa-bars"></i></a>
-    <nav class="navbar navbar-light navbar-expand" id="sidebar-wrapper" style="background: linear-gradient(90deg, rgba(0,0,0,0.15) 0%, #0984e3 100%), #0984e3;box-shadow: inset 10px 0px 10px rgba(33,37,41,0.3);margin: 0;padding: 8px;">
+    <nav class="navbar navbar-light navbar-expand" id="sidebar-wrapper" style="background: #0984e3;">
         <div class="container"><button data-toggle="collapse" class="navbar-toggler d-none" data-target="#"></button>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav sidebar-nav" id="sidebar-nav">
@@ -38,8 +43,8 @@
             </div>
         </div>
     </nav>
-    <header class="d-flex masthead" style="background: linear-gradient(0deg, #f0f0f0 25%, rgba(255,255,255,0)), url(&quot;assets/img/graphy_@2X.png&quot;);">
-        <div class="container my-auto text-center"><img class="rounded-circle img-fluid shadow d-inline-flex flex-grow-1 justify-content-center align-items-center" src="assets/img/wrEvBqWQ_400x400.jpg" width="300" alt="A portrait of David Barsamian" style="border: 5px solid #0984e3;width: 200px;">
+    <header class="d-flex masthead" data-bs-parallax-bg="true" style="background: linear-gradient(0deg, #f0f0f0 25%, rgba(255,255,255,0)), url(&quot;assets/img/graphy_@2X.png&quot;);background-image: url(assets/img/header-background.jpg);background-position: center;background-size: cover;">
+        <div class="container my-auto text-center" data-aos="zoom-out" data-aos-duration="1000" data-aos-once="true" style="text-shadow: 0px 2px 4px rgb(130,130,130);"><img class="rounded-circle img-fluid shadow d-inline-flex flex-grow-1 justify-content-center align-items-center" src="assets/img/portrait_pic.jpg" width="300" alt="A portrait of David Barsamian" style="border: 5px solid #0984e3;width: 200px;">
             <div class="text-nowrap d-flex justify-content-center align-items-center animated-text noSelect"
                 style="background: rgba(255,255,255,0);border-style: none;margin-top: 16px;width: 50%;margin-right: auto;margin-left: auto;"><div class="caption v-middle text-center">
     <h1 class="cd-headline clip">
@@ -53,14 +58,23 @@
     </h1>
 </div></div>
             <h2 style="font-family: 'Exo 2', sans-serif;font-weight: normal;">David Barsamian</h2>
-            <h3 class="mb-5"><em style="font-family: 'Exo 2', sans-serif;font-style: normal;font-size: 26px;font-weight: normal;">Software Engineering Student @<br>California Baptist University</em></h3><a class="btn btn-dark btn-xl js-scroll-trigger" role="button" data-aos="fade-up"
-                data-aos-duration="1000" data-aos-delay="500" data-aos-once="true" href="#portfolio" style="font-family: 'Exo 2', sans-serif;border-radius: 16px;font-style: normal;font-weight: normal;background: #0984e3;margin-right: 16px;">My Portfolio</a>
-            <a
-                class="btn btn-dark btn-xl js-scroll-trigger" role="button" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="500" data-aos-once="true" href="Resume.pdf" style="font-family: 'Exo 2', sans-serif;border-radius: 16px;font-style: normal;font-weight: normal;background: #0984e3;margin: 0;"
-                target="_blank">My Resume</a>
-                <div class="overlay"></div>
+            <h3 class="mb-5"><em style="font-family: 'Exo 2', sans-serif;font-style: normal;font-size: 26px;font-weight: normal;">Software Engineering Student @<br>California Baptist University</em></h3>
+            <div class="row" style="margin-bottom: 16px;">
+                <div class="col"><a class="btn btn-dark btn-xl js-scroll-trigger" role="button" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="750" data-aos-once="true" href="#portfolio" style="font-family: 'Exo 2', sans-serif;border-radius: 16px;font-style: normal;font-weight: normal;background: #0984e3;width: 200px;text-align: center;box-shadow: 0px 2px 4px rgb(130,130,130);">My Portfolio</a></div>
+            </div>
+            <div class="row">
+                <div class="col"><a class="btn btn-dark btn-xl js-scroll-trigger" role="button" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="750" data-aos-once="true" href="/Resume.pdf" style="font-family: 'Exo 2', sans-serif;border-radius: 16px;font-style: normal;font-weight: normal;background: #0984e3;width: 200px;text-align: center;box-shadow: 0px 2px 4px rgb(130,130,130);"
+                        target="_blank">My Resume</a></div>
+            </div>
+            <div class="overlay"></div>
         </div>
     </header>
+    <div class="highlight-blue">
+        <div class="container">
+            <p class="text-left" style="color: rgb(255,255,255);font-family: 'Krona One', sans-serif;font-size: 20px;padding-top: 100px;padding-bottom: 100px;"><br>I view software engineering as a creative vocation: the problem solving and collaboration required to create and maintain a product that could be used by millions around the world means that software engineers must be willing to step out
+                of their comfort zone.<br><br></p>
+        </div>
+    </div>
     <section id="portfolio" class="content-section">
         <div class="container">
             <div class="content-section-heading text-center">
@@ -68,16 +82,25 @@
                 <h2 class="mb-5" style="font-family: 'Exo 2', sans-serif;font-weight: bold;">Projects</h2>
             </div>
             <div class="row no-gutters justify-content-center">
-                <div class="col-auto col-lg-12">
-                    <a class="portfolio-item" href="https://github.com/davidbarsamian/starboard" target="_blank" style="filter: blur(0px);">
-                        <div class="caption" style="filter: blur(0px);">
+                <div class="col-auto col-md-6 col-lg-6 col-xl-6">
+                    <a class="portfolio-item" href="https://github.com/davidbarsamian/starboard" target="_blank" style="filter: blur(0px);border-color: #0984e3;">
+                        <div class="caption" style="filter: blur(0px);border-color: #0984e3;">
                             <div class="caption-content">
                                 <h2 style="font-family: 'Krona One', sans-serif;font-weight: bold;font-size: 16px;">Starboard</h2>
-                                <p class="mb-0" style="font-family: 'Exo 2', sans-serif;font-weight: normal;">A habit-creating, goal-tracking app for iOS inspired by the star sticker charts parents use to incentivize their kids to do chores.</p>
+                                <p class="mb-0" style="font-family: 'Exo 2', sans-serif;font-weight: normal;">A habit-creating, goal-tracking app for iOS.</p>
                             </div>
-                        </div><img class="img-fluid" src="assets/img/arnel-hasanovic-4oWSXdeAS2g-unsplash.png" style="filter: blur(0px) brightness(70%);"></a>
+                        </div><img class="img-fluid" src="assets/img/arnel-hasanovic-4oWSXdeAS2g-unsplash(1).jpg" style="filter: blur(0px) brightness(70%);"></a>
                 </div>
-                <div class="col-auto col-lg-6">
+                <div class="col-auto col-md-6 col-lg-6 col-xl-6">
+                    <a class="portfolio-item" href="https://github.com/davidbarsamian/davidbarsam.com" target="_blank" style="filter: blur(0px);">
+                        <div class="caption" style="filter: blur(0px);">
+                            <div class="caption-content">
+                                <h2 style="font-family: 'Krona One', sans-serif;font-weight: bold;font-size: 16px;">Davidbarsam.com</h2>
+                                <p class="mb-0" style="font-family: 'Exo 2', sans-serif;font-weight: normal;">The website you're currently on.</p>
+                            </div>
+                        </div><img class="img-fluid" src="assets/img/lee-campbell-DtDlVpy-vvQ-unsplash.jpg" style="filter: blur(0px) brightness(70%);"></a>
+                </div>
+                <div class="col-auto col-md-6 col-lg-6 col-xl-6">
                     <a class="portfolio-item" href="https://github.com/davidbarsamian/dungen" target="_blank">
                         <div class="caption" style="filter: blur(0px);">
                             <div class="caption-content">
@@ -86,7 +109,7 @@
                             </div>
                         </div><img class="img-fluid" src="assets/img/igor-karimov-M1nZU61xTK4-unsplash.jpg" style="filter: blur(0px) brightness(70%);"></a>
                 </div>
-                <div class="col-3 col-lg-6">
+                <div class="col-auto col-md-6 col-lg-6">
                     <a class="portfolio-item" href="https://github.com/davidbarsamian/gravitron" target="_blank">
                         <div class="caption">
                             <div class="caption-content">
@@ -97,21 +120,33 @@
                 </div>
             </div><small class="text-muted d-xl-flex justify-content-xl-center align-items-xl-center" style="text-align: center;padding: 8px;margin: 0px;">Placeholder images shown, courtesy of Unsplash.</small></div>
     </section>
-    <footer id="contact" class="footer text-center" style="background: linear-gradient(0deg, #cccccc, white);">
+    <div id="contact" class="contact-clean" style="background: #0984e3;">
+        <form data-bss-recipient="9a0f8dfa5791350c916f26ab576c65f5" data-bss-subject="Contact Form: ">
+            <h2 class="text-center" style="font-family: 'Krona One', sans-serif;font-weight: normal;">Contact Me</h2>
+            <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name" style="font-family: 'Exo 2', sans-serif;" required="" minlength="1"></div>
+            <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" style="font-family: 'Exo 2', sans-serif;" inputmode="email" required="" minlength="1" pattern="(.*\S)@(.*\S)\.(.*\S)"></div>
+            <div class="form-group"><textarea class="form-control" name="message" placeholder="Message" rows="14" style="font-family: 'Exo 2', sans-serif;" required="" minlength="1"></textarea></div>
+            <div class="form-group"><button class="btn btn-primary" type="submit" style="font-family: 'Exo 2', sans-serif;font-weight: normal;">send </button></div>
+        </form>
+    </div>
+    <footer class="footer text-center" style="background: linear-gradient(0deg, #eeeeee, white);">
         <div class="container">
             <ul class="list-inline mb-5">
-                <li class="list-inline-item">&nbsp;<a class="text-white social-link rounded-circle" href="https://www.linkedin.com/in/davidbarsamian/" target="_blank"><i class="icon-social-linkedin"></i></a></li>
-                <li class="list-inline-item">&nbsp;<a class="text-white social-link rounded-circle" href="https://twitter.com/davidbarsam" target="_blank"><i class="icon-social-twitter"></i></a></li>
-                <li class="list-inline-item">&nbsp;<a class="text-white social-link rounded-circle" href="https://www.instagram.com/davidbarsam/" target="_blank"><i class="icon-social-instagram"></i></a></li>
-                <li class="list-inline-item">&nbsp;<a class="text-white social-link rounded-circle" href="https://github.com/davidbarsamian" target="_blank"><i class="icon-social-github"></i></a></li>
+                <li class="list-inline-item">&nbsp;<a class="text-white social-link rounded-circle" href="https://www.linkedin.com/in/davidbarsamian/" target="_blank" style="background: #0984e3;"><i class="icon-social-linkedin"></i></a></li>
+                <li class="list-inline-item">&nbsp;<a class="text-white social-link rounded-circle" href="https://twitter.com/davidbarsam" target="_blank" style="background: #0984e3;"><i class="icon-social-twitter"></i></a></li>
+                <li class="list-inline-item">&nbsp;<a class="text-white social-link rounded-circle" href="https://www.instagram.com/davidbarsam/" target="_blank" style="background: #0984e3;"><i class="icon-social-instagram"></i></a></li>
+                <li class="list-inline-item">&nbsp;<a class="text-white social-link rounded-circle" href="https://github.com/davidbarsamian" target="_blank" style="background: #0984e3;"><i class="icon-social-github"></i></a></li>
             </ul>
             <p class="text-muted mb-0 small">Copyright &nbsp;© David Barsamian 2020</p>
         </div><a class="js-scroll-trigger scroll-to-top rounded" href="#page-top"><i class="fa fa-angle-up"></i></a></footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/smart-forms.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
+    <script src="assets/js/stylish-portfolio.js"></script>
+    <script src="assets/js/Animated-Typing-With-Blinking.js"></script>
 </body>
 
 </html>
